<resources>
    <string name="app_name">Do It Fast</string>
    <string name="username">Username</string>
    <string name="moh">Ministry of Health and Prevention</string>
    <string name="fiac">Federal Authority for Identity and Citizenship</string>
    <string name="moi">Ministry of Interior</string>
    <string name="title_activity_services">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="renew_eid">Renew EID</string>
    <string name="apply_for_visa">Apply for Visa</string>
    <string name="fee_payment">Fee Payment</string>
    <string name="apply_for_an_eid">Apply for an EID</string>
    <string name="renew_visa">Renew Visa</string>
    <string name="ticket_number">Ticket Number</string>
    <string name="ticketnum">111</string>
    <string name="get_ticket">Get Ticket</string>
    <string name="queue_num">20</string>
    <string name="people_in_queue">People In Queue</string>
    <string name="minutes">65</string>
    <string name="min">MIN</string>
    <string name="waiting_time">Waiting Time</string>
    <string name="welcome_to_a_faster_future">Welcome to a faster future</string>
    <string name="what_do_you_want_to_book">WHAT DO YOU WANT TO BOOK?</string>
    <string name="company_example">Company Example</string>
    <string name="mon_sun">Mon - Sun</string>
    <string name="_10_50">10/50</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="a">A</string>
    <string name="select_your_parking_spot">Select your parking spot</string>
    <string name="invoice">Invoice</string>
    <string name="invoice_no_123456">Invoice No.: #123456</string>
    <string name="username_ahmed">Username: ahmed</string>
    <string name="date_1_1_2022">Date: 1/1/2022</string>
    <string name="end_time_3_30_pm">End time: 3:30 PM</string>
    <string name="car_plate_shj_904">Car plate: SHJ - 904</string>
    <string name="parking_no_a_16">Parking No.: A-16</string>
    <string name="amount_paid_20_aed">Amount paid: 20 AED</string>
    <string name="card_details">Card Details</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="full_name">FULL NAME</string>
    <string name="cvc">CVC</string>
    <string name="mm_yy">MM/YY</string>
    <string name="pay">pay</string>
    <string name="working_hours">Working hours</string>
    <string name="when_are_you_arriving">When are you arriving?</string>
    <string name="pick_a_time_and_date">pick a time and date</string>
    <string name="for_how_long_are_you_staying">For how long are you staying?</string>
    <string name="confirm">confirm</string>


</resources>