<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bksplit"
    tools:context=".CardDetails">

    <TextView
        android:id="@+id/tvCard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotobold"
        android:text="@string/card_details"
        android:textColor="@color/dark_green"
        android:textSize="38sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04"
        app:layout_constraintWidth_percent=".85" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCard"
        app:layout_constraintVertical_bias="0.04"
        app:srcCompat="@drawable/creditcard"
      />

    <EditText
        android:id="@+id/etCardNo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbackground"
        android:ems="10"
        android:hint="@string/card_number"
        android:inputType="textPersonName"
        android:padding="7dp"

        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView9"
        app:layout_constraintStart_toStartOf="@+id/imageView9"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        app:layout_constraintVertical_bias="0.15"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etCardName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbackground"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:padding="7dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etCardNo"
        app:layout_constraintStart_toStartOf="@+id/etCardNo"
        app:layout_constraintTop_toBottomOf="@+id/etCardNo"
        app:layout_constraintVertical_bias="0.05"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etCardCVC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbackground"
        android:ems="10"
        android:hint="@string/cvc"
        android:inputType="textPersonName"
        android:padding="7dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etCardName"
        app:layout_constraintTop_toBottomOf="@+id/etCardName"
        app:layout_constraintVertical_bias="0.05"

        app:layout_constraintWidth_percent=".4"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etCardExpiration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextbackground"
        android:ems="10"
        android:hint="@string/mm_yy"
        android:inputType="textPersonName"
        android:padding="7dp"
        android:textSize="20sp"
        app:layout_constraintWidth_percent=".35"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/etCardCVC"
        app:layout_constraintStart_toStartOf="@+id/etCardName"
        app:layout_constraintTop_toBottomOf="@+id/etCardName"
        app:layout_constraintVertical_bias="0.05"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnPay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_green"
        android:onClick="onPayClick"
        android:text="@string/pay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96"
        app:layout_constraintWidth_percent=".4" />


</androidx.constraintlayout.widget.ConstraintLayout>